# SIMD_strings

./: AVX2_report.md  CMakeLists.txt  Readme.md  main.cpp  main_sse.cpp  mystring.cpp  mystring.hpp  mystring_avx.cpp  mystring_avx.h  mystring_simd.h  mystring_simd_sse.h  own_tests.cpp  own_tests_avx.cpp  own_tests_simd.cpp  own_tests_simd_sse.cpp  time_counnt.cpp  time_counnt_sse.cpp
